--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <header>
         <h1>Bwin ဆပ်ပြာ</h1>
-        <p>ထန်းပင်ကုန်း </p>
+        <p>ထန်းပင်ကုန်း img credit Alexander Power</p>
     </header>
     <div class="container">
         <img src="Bwin.jpg" alt="Bwin"></img>
